--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@
 }
 
 #pixel-board {
-    height: 250px;
-    width: 250px;
-    /* border: solid black 1px; */
+    height: 230px;
+    width: 230px;
     display: inline-block;
     flex-direction: column;
+    font-size: 0;
 }
 
 .pixel {
