--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  margin-top: 2%;
+  background-color: #33aaff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
 .color {
   display: inline-block;
   border: solid black 1px;
@@ -7,36 +26,41 @@
 
 #colorBlack {
   background-color: black;
+  border-radius: 5px;
+  border: none;
 }
 
 #colorBlue {
   background-color: blue;
+  border-radius: 5px;
+  border: none;
 }
 
 #colorGrey {
   background-color: grey;
+  border-radius: 5px;
+  border: none;
 }
 
 #colorRed {
   background-color: red;
+  border-radius: 5px;
+  border: none;
 }
 
 #pixel-board {
-  height: 230px;
-  width: 230px;
+  margin-top: 2%;
+  height: 280px;
+  width: 280px;
   display: inline-block;
   flex-direction: column;
-  font-size: 0;
 }
 
 .pixel {
   background-color: white;
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
   border: solid black 1px;
   display: inline-block;
-}
-
-#clear-board {
-  display: block;
+  border-radius: 5px;
 }
